Revert "Fixed overlapping logo on landing page + removed icon overlapping hamburger dropdown on small devices"
This reverts commit 3e1f6b9dec188aa65742c12f8674ae9f91284712.

--- a/static/main.css
+++ b/static/main.css
@@ -16,10 +16,9 @@
 }
 
 .landing-page-logo {
-    max-width: 100%;
-    height: auto;
-    position: absolute;
     width: 750px;
+    height: 750px;
+    position: absolute;
 }
 
 .get-started {
@@ -1932,8 +1931,6 @@ input, select, textarea {
 		input[type="reset"]:after,
 		input[type="button"]:after,
 		button:after,
-		/*
-
 		.button:after {
 			-moz-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 			-webkit-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
@@ -1948,7 +1945,6 @@ input, select, textarea {
 			right: 0;
 			text-align: center;
 			width: 2.5rem;
-			*/
 		}
 
 		input[type="submit"]:hover,
